--- a/apps/wond/src/components/LeftPanel/index.scss
+++ b/apps/wond/src/components/LeftPanel/index.scss
@@ -4,5 +4,6 @@
   position: relative;
   width: 285px;
   height: 100%;
-  background-color: $panel-color;
+  background-color: #fff;
+  border-right: 1px solid $panel-border-color;
 }
