初步接入Layer树，编辑过程维护rtree索引，更改部分数据结构

--- a/apps/wond/src/components/LeftPanel/index.scss
+++ b/apps/wond/src/components/LeftPanel/index.scss
@@ -4,6 +4,7 @@
   position: relative;
   width: 285px;
   height: 100%;
-  background-color: #fff;
+  background-color: $panel-color;
+  box-sizing: border-box;
   border-right: 1px solid $panel-border-color;
 }
