--- a/apps/wond/src/components/RightPanel/index.scss
+++ b/apps/wond/src/components/RightPanel/index.scss
@@ -4,7 +4,6 @@
   position: relative;
   width: 285px;
   height: 100%;
-  // background-color: $panel-color;
-  background-color: #fff;
+  background-color: $panel-color;
   border-left: 1px solid $panel-border-color;
 }
