--- a/apps/wond/src/variable.scss
+++ b/apps/wond/src/variable.scss
@@ -1,7 +1,7 @@
 // Theme variables
 :root {
   // Default theme (light)
-  --panel-color: #ffffff;
+  --panel-color: rgba(253, 253, 255, 1);
   --font-color: #000000;
   --panel-border-color: #0000001a;
 }
