--- a/apps/wond/src/main.scss
+++ b/apps/wond/src/main.scss
@@ -1,4 +1,4 @@
-@use './variable.scss' as *;
+@use "./variable.scss" as *;
 
 body {
   margin: 0;
@@ -7,6 +7,7 @@ body {
   height: 100vh;
   position: relative;
   overflow: hidden;
+
 
   #root {
     position: relative;
