--- a/apps/wond/src/components/right_panel/index.scss
+++ b/apps/wond/src/components/right_panel/index.scss
@@ -1,6 +1,6 @@
-@use '../../variable.scss' as *;
+@use "../../variable.scss" as *;
 
-.right-panel {
+.wond-right-panel {
   position: relative;
   width: 285px;
   height: 100%;
