--- a/apps/wond/src/main.scss
+++ b/apps/wond/src/main.scss
@@ -15,3 +15,10 @@ body {
     color: $font-color;
   }
 }
+
+:root {
+  ::selection {
+    background-color: rgba(152, 208, 249, 1);
+    color: #000;
+  }
+}
