--- a/apps/wond/src/variable.scss
+++ b/apps/wond/src/variable.scss
@@ -4,6 +4,50 @@
   --panel-color: rgba(253, 253, 255, 1);
   --font-color: #000000;
   --panel-border-color: #0000001a;
+  --default-font-family:
+    Inter, Roboto, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial,
+    'Noto Sans', sans-serif, SFProLocalRange;
+
+  // color
+  --color-text: #000000e6;
+  --color-bg-secondary: #f5f5f5;
+  --color-border: #e6e6e6;
+  --color-text-secondary: #00000080;
+  --color-bg-tertiary: #e6e6e6;
+
+  // font-weight
+  --font-weight-strong: 550;
+
+  // spacer
+  --spacer-1: 0.25rem;
+  --spacer-2: 0.5rem;
+  --spacer-3: 1rem;
+  --spacer-4: 1.5rem;
+
+  // text-body-layer
+  --text-body-large-strong-font-family:
+    'Inter', Roboto, ui-sans-serif, system-ui, -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Helvetica Neue',
+    'Arial', 'Noto Sans', sans-serif, 'SFProLocalRange';
+  --text-body-large-strong-font-size: 0.8125rem;
+  --text-body-large-strong-font-weight: 550;
+  --text-body-large-strong-letter-spacing: -0.002rem;
+  --text-body-large-strong-line-height: 1.375rem;
+
+  --text-body-small-strong-font-family:
+    'Inter', ui-sans-serif, system-ui, -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue',
+    'Arial', 'Noto Sans', sans-serif, 'SFProLocalRange';
+  --text-body-small-strong-font-size: 0.5625rem;
+  --text-body-small-strong-font-weight: 500;
+  --text-body-small-strong-letter-spacing: 0.016875rem;
+  --text-body-small-strong-line-height: 0.875rem;
+
+  --text-body-medium-line-height: 1rem;
+  --text-body-medium-letter-spacing: 0.00344rem;
+  --text-body-medium-font-family:
+    'Inter', ui-sans-serif, system-ui, -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue',
+    'Arial', 'Noto Sans', sans-serif, 'SFProLocalRange';
+  --text-body-medium-font-size: 0.6875rem;
+  --text-body-medium-font-weight: 450;
 }
 
 [data-theme='dark'] {
@@ -16,3 +60,4 @@
 $panel-color: var(--panel-color);
 $font-color: var(--font-color);
 $panel-border-color: var(--panel-border-color);
+$default-font-family: var(--default-font-family);
