--- a/apps/wond/src/variable.scss
+++ b/apps/wond/src/variable.scss
@@ -14,6 +14,9 @@
   --color-border: #e6e6e6;
   --color-text-secondary: #00000080;
   --color-bg-tertiary: #e6e6e6;
+  --color-bg-selected: #e5f4ff;
+  --color-icon-brand: #007be5;
+  --color-icon-brand-secondary: #80caff;
 
   // font-weight
   --font-weight-strong: 550;
