--- a/apps/wond/src/components/common/setter-header/index.scss
+++ b/apps/wond/src/components/common/setter-header/index.scss
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding-left: var(--spacer-3);
   padding-right: var(--spacer-2);
   font-weight: var(--font-weight-strong);
