--- a/apps/wond/src/components/layer/layer_node/index.scss
+++ b/apps/wond/src/components/layer/layer_node/index.scss
@@ -3,14 +3,16 @@
   align-items: center;
   box-sizing: border-box;
   padding-left: 16px;
+  padding-right: 20px;
   font-size: 12px;
   color: rgba(0, 0, 0, 0.9);
+  user-select: none;
 
   &:hover,
   &.hovered,
   &.selected {
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       z-index: -1;
       height: 24px;
@@ -57,8 +59,63 @@
     }
   }
 
+  &.invisible {
+    color: rgba(0, 0, 0, 0.5);
+    .layer-node-indent {
+      color: inherit;
+    }
+  }
+
   .layer-node-name {
+    flex: 1;
     padding-left: 4px;
     line-height: 1;
+  }
+
+  &.locked,
+  &:hover {
+    .icon-button.lock {
+      display: flex;
+    }
+  }
+
+  &.invisible,
+  &:hover {
+    .icon-button.visibility {
+      display: flex;
+    }
+  }
+
+  &.invisible.selected {
+    .icon-button {
+      color: inherit;
+    }
+  }
+
+  .suffix-button-wrapper {
+    width: var(--icon-button-size);
+    height: var(--icon-button-size);
+    border-radius: 0.3125rem;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+
+    .icon-button {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      display: none;
+      outline: none;
+      border: none;
+      background-color: transparent;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
