--- a/apps/wond/src/main.scss
+++ b/apps/wond/src/main.scss
@@ -1,4 +1,5 @@
 @use './variable.scss' as *;
+@use './fonts.scss';
 
 body {
   margin: 0;
@@ -17,8 +18,15 @@ body {
 }
 
 :root {
+  font-family: $default-font-family;
   ::selection {
     background-color: rgba(152, 208, 249, 1);
     color: #000;
   }
+}
+
+.column-gap-2 {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacer-2);
 }
