--- a/apps/wond/src/variable.scss
+++ b/apps/wond/src/variable.scss
@@ -5,8 +5,8 @@
   --font-color: #000000;
   --panel-border-color: #0000001a;
   --default-font-family:
-    Inter, Roboto, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial,
-    'Noto Sans', sans-serif, SFProLocalRange;
+    Inter, Roboto, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial,
+    "Noto Sans", sans-serif, SFProLocalRange;
 
   // color
   --color-text: #000000e6;
@@ -17,6 +17,9 @@
   --color-bg-selected: #e5f4ff;
   --color-icon-brand: #007be5;
   --color-icon-brand-secondary: #80caff;
+
+  // icon
+  --icon-button-size: 1.5rem;
 
   // font-weight
   --font-weight-strong: 550;
@@ -29,16 +32,16 @@
 
   // text-body-layer
   --text-body-large-strong-font-family:
-    'Inter', Roboto, ui-sans-serif, system-ui, -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Helvetica Neue',
-    'Arial', 'Noto Sans', sans-serif, 'SFProLocalRange';
+    "Inter", Roboto, ui-sans-serif, system-ui, -apple-system, "BlinkMacSystemFont", "Segoe UI", "Helvetica Neue",
+    "Arial", "Noto Sans", sans-serif, "SFProLocalRange";
   --text-body-large-strong-font-size: 0.8125rem;
   --text-body-large-strong-font-weight: 550;
   --text-body-large-strong-letter-spacing: -0.002rem;
   --text-body-large-strong-line-height: 1.375rem;
 
   --text-body-small-strong-font-family:
-    'Inter', ui-sans-serif, system-ui, -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue',
-    'Arial', 'Noto Sans', sans-serif, 'SFProLocalRange';
+    "Inter", ui-sans-serif, system-ui, -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica Neue",
+    "Arial", "Noto Sans", sans-serif, "SFProLocalRange";
   --text-body-small-strong-font-size: 0.5625rem;
   --text-body-small-strong-font-weight: 500;
   --text-body-small-strong-letter-spacing: 0.016875rem;
@@ -47,13 +50,13 @@
   --text-body-medium-line-height: 1rem;
   --text-body-medium-letter-spacing: 0.00344rem;
   --text-body-medium-font-family:
-    'Inter', ui-sans-serif, system-ui, -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue',
-    'Arial', 'Noto Sans', sans-serif, 'SFProLocalRange';
+    "Inter", ui-sans-serif, system-ui, -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica Neue",
+    "Arial", "Noto Sans", sans-serif, "SFProLocalRange";
   --text-body-medium-font-size: 0.6875rem;
   --text-body-medium-font-weight: 450;
 }
 
-[data-theme='dark'] {
+[data-theme="dark"] {
   --panel-color: #2c2c2c;
   --font-color: #ffffff;
   --panel-border-color: #ffffff1a;
